correct spacing btwn block quote and author name

--- a/template_files/template.css
+++ b/template_files/template.css
@@ -739,7 +739,7 @@ blockquote:after {
 .center-quote-author {
   font-size: 16px;
   font-weight: 600;
-  margin-top: .9em;
+  margin-top: 9px;
 }
 
 .center-div-initial {
